<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MobileApp4</string>
    <string name="action_settings">Settings</string>
    <string name="photo">Photo</string>
    <string name="compose">Compose</string>
    <string name="twitter">Twitter</string>
    <string name="publish">Publish</string>
    <string name="hint">Message here</string>
    <string name="title_activity_compose">ComposeActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="compose_msg">Compose a Messege</string>

</resources>