<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/compose_layout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_alignParentLeft="true"
    android:layout_alignParentRight="true"
    android:layout_alignParentTop="true"
    android:background="@android:color/background_dark"
    android:orientation="vertical"
    android:weightSum="1.0"
    tools:context=".ComposeActivity" >

    <ImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight=".50"
        android:contentDescription="@string/twitter"
        android:src="@drawable/twitter_head" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight=".50"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20dip"
            android:background="@drawable/edittext_border"
            android:ems="10"
            android:gravity="top"
            android:hint="@string/hint"
            android:inputType="textMultiLine"
            android:lines="5"
            android:padding="10dip"
            android:textColor="@android:color/white" >
            <requestFocus />
        </EditText>

        <Button
            android:id="@+id/publish"
            android:layout_width="100dip"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="#88ffffff"
            android:text="@string/publish"
            android:textSize="20sp"
            android:typeface="sans" />
    </LinearLayout>

</LinearLayout>